--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-Title: Easy Engineering
-subtitle: Robotics, CS, EE, Vision and Deep Learning
+title: Robotics, CS, EE, Vision and Deep Learning
+subtitle: pklee
 ---
