--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: home
-title: Robotics, CS, EE, Vision and Deep Learning-------------
+title: Robotics, CS, EE, Vision and Deep Learning
 ---
