--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
 layout: home
-title: Robotics, CS, EE, Vision and Deep Learning
+title: ""
+subtitle: Robotics, CS, EE, Vision and Deep Learning
 ---
